# app.dots.ocr.runner

./: .gitignore  Privacy_Policy.md  README.md
rest_api/: .gitignore  INSTALLATION.md  LICENSE  MARKDOWN_EXPORT_USAGE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_markdown_export.py  test_markdown_export_new.py
rest_api/dotsocr_runner_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py  utils.py
rest_api/examples/: async_document_api_example.py  async_markdown_export_example.py  async_usage.py  basic_usage.py  document_list_example.py  document_management_example.py  document_search_example.py  markdown_export_example.py
rest_api/tests/: __init__.py  test_delete_task_behavior.py  test_delete_task_isolated.py  test_delete_task_simple.py  test_markdown_export_enhanced.py  test_markdown_export_final.py  test_markdown_export_working.py  test_models.py
